--- a/dataannotation/datastatistics/versioned_recording_annotations/v2/25_panfriedtofu/25_40.yaml
+++ b/dataannotation/datastatistics/versioned_recording_annotations/v2/25_panfriedtofu/25_40.yaml
@@ -34,6 +34,10 @@ step_annotations:
   modified_description: (Drop)  add-add the tofu cubes to the pan
   start_time: 316.140572713422
   step_id: 279
+- description: Turn-Turn on the heat to medium
+  end_time: 338
+  start_time: 335
+  step_id: 276
 - description: Cook-Cook 5 to 6 minutes until tofu cubes are lightly browned on the bottom
   end_time: 440.141
   errors:
@@ -43,28 +47,26 @@ step_annotations:
   start_time: 336.29718640991535
   step_id: 292
 - description: remove-Briefly remove the pan from the heat to reduce spitting
-  end_time: -1.0
-  start_time: -1.0
+  end_time: 500
+  start_time: 488
   step_id: 280
 - description: Flip-Flip the tofu with tongs
-  end_time: 472.906
-  start_time: 444.5063757279323
+  end_time: 524
+  start_time: 510
   step_id: 285
 - description: Return-Return the heat to medium
-  end_time: 484.123
-  start_time: 480.57610550060457
+  end_time: 532
+  start_time: 528
   step_id: 287
 - description: cook-cook until tofu turns brown
-  end_time: -1.0
-  start_time: -1.0
+  end_time: 600
+  start_time: 533
   step_id: 290
 - description: remove-Briefly remove from the heat again
   end_time: 605.489
   errors:
-  - description: Safety issue - Do not place it on the stove top, but something else
-    tag: Technique Error
-  modified_description: (place it on something) remove-Briefly remove from the heat
-    again
+  - description: Placing it on a surface which is non-heat resistant
+    tag: Preparation Error
   start_time: 597.2722900592503
   step_id: 282
 - description: drizzle-drizzle with the 1 tablespoons sesame oil on the pan
@@ -75,44 +77,43 @@ step_annotations:
   modified_description: drizzle-drizzle with the 2 tablespoons sesame oil on the pan
   start_time: 660.9247543639661
   step_id: 278
-- description: drizzle-drizzle 1 tablespoon soy sauce (watch for spitting) on the
-    pan
+- description: drizzle-drizzle 1 tablespoon soy sauce (watch for spitting) on the pan
   end_time: 695.872
   start_time: 687.4466144909311
   step_id: 277
 - description: Return-Return to low heat
-  end_time: -1.0
+  end_time: 702
   errors:
   - description: Use medium heat instead of low heat
     tag: Temperature Error
   modified_description: Return-Return to medium heat
-  start_time: -1.0
+  start_time: 700
   step_id: 284
 - description: cook-cook pan for 2 minutes
   end_time: 780.238
+  errors:
+  - description: Cooked for 1.5 minutes
+    tag: Timing Error
   start_time: 703.3597305671101
   step_id: 289
 - description: flip-flip tofu on the pan
-  end_time: 802.0210502394195
+  end_time: 795
   errors:
   - description: Do not flip all the tofu pieces
     tag: Technique Error
-  modified_description: (not all) flip-flip tofu on the pan
+  - description: Spilled some tofu pieces and oil while flipping
+    tag: Technique Error
   start_time: 785.047059758162
   step_id: 281
 - description: cook-cook pan for 2 minutes until the colour is darkened
-  end_time: 859.3082681136638
+  end_time: 863
   errors:
   - description: Over cook the tofu
     tag: Timing Error
   modified_description: cook-cook pan for 3 minutes until the colour is darkened
-  start_time: 810.5080454800483
+  start_time: 796
   step_id: 288
 - description: Transfer-Transfer to a serving dish
   end_time: 870.9778865695283
-  start_time: 861.430016923821
+  start_time: 864
   step_id: 283
-- description: Turn-Turn on the heat to medium
-  end_time: -1.0
-  start_time: -1.0
-  step_id: 276
